syntax = "proto3";


message DictionaryEntryA{
  string from=1;
  string to=2;
  string p=3;
  string p1=4;
  string p2=5;
  string p3=6;
}
message DictionaryEntryB{
  string from=1;
  string to=2;
  uint32 index=3;
}

message Dictionary{
  repeated DictionaryEntryB before=2;
  repeated DictionaryEntryA entrys=1;
  repeated DictionaryEntryB after=3;
}

message AppliedVoiceConfig{
  string kind=1;
  string readName=2;
  float speed=3;
  float tone=4;
  float volume=5;
  float maxReadLimit=6;
  float allpass=7;
  float intone=8;
  float threshold=9;
  Dictionary dictionary=10;
}
message VoiceConfigRequest{
  string guild=1;
  string user=2;
  string nickname=3;
  string username=4;
  fixed64 dict_hash=5;
}
message ReadNameRequest{
  string guild=1;
  string user=2;
  string nickname=3;
  string username=4;
}
message ReadName{
  string value=1;
}
service ConfigManager {
  rpc appliedVoiceConfig(VoiceConfigRequest) returns (AppliedVoiceConfig){}
  rpc readName(ReadNameRequest) returns (ReadName){}

}